--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Load Calculator</title>
+    <script src="https://unpkg.com/jasmine-core/lib/jasmine-core/jasmine.js"></script>
+    <script src="https://unpkg.com/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
+    <script src= "https://unpkg.com/jasmine-core/lib/jasmine-core/boot.js"></script>
+
+    <script src=calculator-test.js></script>
+    <link rel="stylesheet" href="https://unpkg.com/jasmine-core/lib/jasmine-core/jasmine.css" />
+
     <script type="text/javascript" src="calculator.js"></script>
     <link rel="stylesheet" href="calculator.css">
   </head>
